--- a/Login.html
+++ b/Login.html
@@ -6,7 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Portal</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400&display=swap" rel="stylesheet">
     <style>
+        /* General font styling */
+        body {
+      font-family: 'Montserrat', sans-serif;
+    }
+
+        /* Hover effect for cards */
         .hover-card {
             transition: transform 0.5s ease, box-shadow 0.5s ease;
         }
@@ -15,46 +22,123 @@
             transform: translateY(-10px) scale(1.05);
             box-shadow: 0 12px 30px rgba(0, 0, 0, 0.2);
         }
+
+        /* Button hover effect */
+        .login-button:hover {
+            background-color: #666666;
+        }
+
+        /* Set fixed image size for consistency */
+        .login-img {
+            width: 140px;
+            height: 140px;
+            object-fit: contain;
+        }
+
+        /* Smaller Student Login image */
+        .student-login-img {
+            width: 120px;
+            height: 120px;
+        }
+
+        /* Increase box height and spacing */
+        .login-box {
+            min-height: 300px;
+            margin-bottom: 20px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
+        /* Adjust spacing between login boxes */
+        .login-options {
+            gap: 75px;
+        }
+
+        /* Navbar button styling */
+        .nav-button {
+            background-color: #000;
+            color: white;
+            padding: 0.5rem 1rem;
+            border-radius: 8px;
+            transition: background-color 0.3s ease;
+        }
+
+        .nav-button:hover {
+            background-color: #444444;
+        }
+
+        /* Navbar background color */
+        .navbar-bg {
+            background-color: #f6f7fa;
+        }
+
+        /* Gradient background for footer */
+        .gradient-bottom {
+            background: linear-gradient(to bottom, #ffffff 75%, #f0f0f0 100%);
+        }
+
     </style>
 </head>
 
-<body class="bg-gradient-to-r from-blue-50 to-purple-50 font-sans">
-    <div class="bg-gradient-to-r from-teal-500 to-blue-500 py-5 shadow-lg">
+<body class="bg-white font-sans gradient-bg">
+    <!-- Navbar -->
+    <div class="navbar-bg py-3 shadow-lg">
         <div class="container mx-auto flex items-center justify-between px-6">
-            <div class="text-3xl text-white font-bold tracking-wide">Skilledity</div>
-            <div class="text-xl text-white">Login Portal</div>
+            <div class="text-3xl text-black font-bold tracking-wide">Skilledity</div>
+            <button class="nav-button">Login</button>
         </div>
     </div>
 
-    <div class="container mx-auto mt-10 p-6 bg-white shadow-lg rounded-lg max-w-4xl">
-        <main class="text-center">
-            <h1 class="text-4xl font-bold text-gray-800">Welcome to the <span class="text-teal-500">Login Portal!</span></h1>
-            <p class="mt-4 text-lg text-gray-600">Please select your login type to continue.</p>
+    <!-- Main content -->
+    <main class="container mx-auto mt-12 text-center">
+        <h1 class="text-4xl font-bold text-gray-800">Welcome to the <span class="text-purple-950">Login Portal!</span></h1>
+        <p class="mt-4 text-lg text-gray-600">Please select your login type to continue.</p>
 
-            <div class="flex justify-between mt-8">
-                <div class="hover-card bg-gradient-to-r from-green-200 to-blue-200 p-6 rounded-lg w-1/3 mx-2">
-                    <img src="https://saeedmirshekari.com/assets/img/uploads/undraw_exams_re_4ios.png" alt="Student Login" class="w-24 mx-auto mb-4">
-                    <h3 class="text-2xl font-semibold text-teal-700">Student Login</h3>
-                    <p class="text-gray-600 mt-2">Accessing your student portal.</p>
-                    <button class="mt-4 px-6 py-2 bg-teal-600 text-white rounded-lg hover:bg-teal-700 transition duration-300">Login</button>
-                </div>
-
-                <div class="hover-card bg-gradient-to-r from-yellow-200 to-red-200 p-6 rounded-lg w-1/3 mx-2">
-                    <img src="https://miro.medium.com/v2/resize:fit:1400/format:webp/1*Y7jvA4hzPd5jVS4i4n5J0A.png" alt="School Login" class="w-24 mx-auto mb-4">
-                    <h3 class="text-2xl font-semibold text-red-600">School Login</h3>
-                    <p class="text-gray-600 mt-2">Accessing your school portal.</p>
-                    <button class="mt-4 px-6 py-2 bg-red-600 text-white rounded-lg hover:bg-red-700 transition duration-300">Login</button>
-                </div>
-
-                <div class="hover-card bg-gradient-to-r from-purple-200 to-pink-200 p-6 rounded-lg w-1/3 mx-2">
-                    <img src="https://static.kanbantool.com/kanban-guide/what-is-overall-equipment-effectiveness.png" alt="Admin Login" class="w-24 mx-auto mb-4">
-                    <h3 class="text-2xl font-semibold text-purple-600">Admin Login</h3>
-                    <p class="text-gray-600 mt-2">Accessing your admin portal.</p>
-                    <button class="mt-4 px-6 py-2 bg-purple-600 text-white rounded-lg hover:bg-purple-700 transition duration-300">Login</button>
-                </div>
+        <!-- Login Options -->
+        <div class="flex flex-col md:flex-row justify-center mt-10 login-options">
+            <!-- Student Login -->
+            <div class="hover-card bg-white p-8 rounded-lg w-full md:w-1/4 border border-gray-300 shadow-md login-box">
+                <img src="student.svg" alt="Student Login" class="student-login-img login-img mx-auto mb-6">
+                <h3 class="text-2xl font-semibold text-black">Student Login</h3>
+                <p class="text-gray-600 mt-2">Accessing your student portal.</p>
+                <button class="login-button mt-4 px-6 py-2 bg-black text-white rounded-lg transition duration-300">Login</button>
             </div>
-        </main>
-    </div>
+
+            <!-- School Login -->
+            <div class="hover-card bg-white p-8 rounded-lg w-full md:w-1/4 border border-gray-300 shadow-md login-box">
+                <img src="building.svg" alt="School Login" class="login-img mx-auto mb-6">
+                <h3 class="text-2xl font-semibold text-black">School Login</h3>
+                <p class="text-gray-600 mt-2">Accessing your school portal</p>
+                <a href="2loginpage.html" class="login-button mt-4 px-6 py-2 bg-black text-white rounded-lg transition duration-300">Login</a>
+            </div>
+
+            <!-- Admin Login -->
+            <div class="hover-card bg-white p-8 rounded-lg w-full md:w-1/4 border border-gray-300 shadow-md login-box">
+                <img src="teacher.svg" alt="Admin Login" class="login-img mx-auto mb-6">
+                <h3 class="text-2xl font-semibold text-black">Admin Login</h3>
+                <p class="text-gray-600 mt-2">Accessing your admin portal.</p>
+                <button class="login-button mt-4 px-6 py-2 bg-black text-white rounded-lg transition duration-300">Login</button>
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
