--- a/Login.html
+++ b/Login.html
@@ -10,8 +10,8 @@
     <style>
         /* General font styling */
         body {
-      font-family: 'Montserrat', sans-serif;
-    }
+            font-family: 'Montserrat';
+        }
 
         /* Hover effect for cards */
         .hover-card {
@@ -49,6 +49,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            background-color: #fafafa; /* Lighter gray */
         }
 
         /* Adjust spacing between login boxes */
@@ -99,7 +100,7 @@
         <!-- Login Options -->
         <div class="flex flex-col md:flex-row justify-center mt-10 login-options">
             <!-- Student Login -->
-            <div class="hover-card bg-white p-8 rounded-lg w-full md:w-1/4 border border-gray-300 shadow-md login-box">
+            <div class="hover-card p-8 rounded-lg w-full md:w-1/4 border border-gray-300 shadow-md login-box">
                 <img src="student.svg" alt="Student Login" class="student-login-img login-img mx-auto mb-6">
                 <h3 class="text-2xl font-semibold text-black">Student Login</h3>
                 <p class="text-gray-600 mt-2">Accessing your student portal.</p>
@@ -107,7 +108,7 @@
             </div>
 
             <!-- School Login -->
-            <div class="hover-card bg-white p-8 rounded-lg w-full md:w-1/4 border border-gray-300 shadow-md login-box">
+            <div class="hover-card p-8 rounded-lg w-full md:w-1/4 border border-gray-300 shadow-md login-box">
                 <img src="building.svg" alt="School Login" class="login-img mx-auto mb-6">
                 <h3 class="text-2xl font-semibold text-black">School Login</h3>
                 <p class="text-gray-600 mt-2">Accessing your school portal</p>
@@ -115,7 +116,7 @@
             </div>
 
             <!-- Admin Login -->
-            <div class="hover-card bg-white p-8 rounded-lg w-full md:w-1/4 border border-gray-300 shadow-md login-box">
+            <div class="hover-card p-8 rounded-lg w-full md:w-1/4 border border-gray-300 shadow-md login-box">
                 <img src="teacher.svg" alt="Admin Login" class="login-img mx-auto mb-6">
                 <h3 class="text-2xl font-semibold text-black">Admin Login</h3>
                 <p class="text-gray-600 mt-2">Accessing your admin portal.</p>
@@ -126,6 +127,8 @@
 </body>
 
 </html>
+
+
 
 
 
