--- a/2loginpage.html
+++ b/2loginpage.html
@@ -9,15 +9,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Montserrat', sans-serif;
+      font-family: 'Montserrat';
+      background-color: white;
     }
 
-    /* Navbar button styling */
     .nav-button {
       background-color: #000;
       color: white;
-      padding: 0.3rem 0.6rem;
-      border-radius: 6px;
+      padding: 0.5rem 1rem;
+      border-radius: 8px;
       transition: background-color 0.3s ease;
     }
 
@@ -28,12 +28,11 @@
     /* Navbar background color */
     .navbar-bg {
       background-color: #f6f7fa;
-      padding: 0.8rem 0;
     }
 
-    /* Smaller font size for the logo */
-    .navbar-logo {
-      font-size: 1.5rem;
+    /* Gradient background for footer */
+    .gradient-bottom {
+      background: linear-gradient(to bottom, #ffffff 75%, #f0f0f0 100%);
     }
 
     /* Adjust login form and image alignment */
@@ -41,30 +40,36 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      justify-content: center;
+      height: 80vh;
+      padding: 0 1rem;
     }
 
     @media (min-width: 1024px) {
       .login-container {
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: space-around;
       }
     }
 
-    /* Adjust the spacing for the illustration */
-    .illustration {
-      margin-top: 2rem;
+    .content-container {
+      margin-top: -50px;
     }
 
-    @media (min-width: 1024px) {
-      .illustration {
-        margin-top: 0;
-        padding-left: 3rem;
-      }
+    /* Illustration styling */
+    .illustration img {
+      width: 400px;
+      height: 500px; /* Same size as the first page */
     }
 
-    /* Add blue border on top of the form */
+    /* Add gradient background to the login box */
     .login-box {
-      border-top: 6px solid #1E40AF; /* Blue color border */
+      background: linear-gradient(to bottom, #ffffff 80%, #f0f0f0 100%);
+      border-top: 6px solid #1E40AF;
+      margin-top: 1.5rem;
+      padding: 2rem;
+      border-radius: 8px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }
   </style>
 </head>
@@ -72,9 +77,9 @@
 <body class="bg-white font-sans gradient-bg">
 
   <!-- Navbar -->
-  <div class="navbar-bg shadow-lg">
+  <div class="navbar-bg py-3 shadow-lg">
     <div class="container mx-auto flex items-center justify-between px-6">
-      <div class="navbar-logo text-black font-bold tracking-wide">Skilledity</div>
+      <div class="text-3xl text-black font-bold tracking-wide">Skilledity</div>
       <button class="nav-button">Login</button>
     </div>
   </div>
@@ -107,14 +112,18 @@
           </div>
         </div>
 
-        <button type="submit"
-          class="w-full bg-indigo-600 text-white font-semibold py-2 rounded-lg hover:bg-indigo-700 transition">Login</button>
+        <a href="4loginpage.html">
+          <button type="button" class="w-full bg-indigo-600 text-white font-semibold py-2 rounded-lg hover:bg-indigo-700 transition">
+            Login
+          </button>
+        </a>
+        
       </form>
     </div>
 
     <!-- Right: Illustration -->
-    <div class="hidden lg:block lg:w-1/2 lg:text-right illustration">
-      <img src="photo.svg" alt="Login illustration" class="w-2/3">
+    <div class="hidden lg:block illustration">
+      <img src="photo.svg" alt="Login illustration">
     </div>
 
   </div>
@@ -122,7 +131,6 @@
 </body>
 
 </html>
-
 
 
 
