--- a/3loginpage.html
+++ b/3loginpage.html
@@ -9,30 +9,73 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Montserrat', sans-serif;
+      font-family: 'Montserrat';
+      background-color: white;
+    }
+
+    /* Adjust the margin-top to bring the content closer to the navbar */
+    .content-container {
+      margin-top: -50px;
+    }
+
+    /* Illustration styling */
+    .illustration img {
+      width: 400px;
+      height: 500px;
+    }
+
+    .nav-button {
+      background-color: #000;
+      color: white;
+      padding: 0.5rem 1rem;
+      border-radius: 8px;
+      transition: background-color 0.3s ease;
+    }
+
+    .nav-button:hover {
+      background-color: #444444;
+    }
+
+    /* Navbar background color */
+    .navbar-bg {
+      background-color: #f6f7fa;
+    }
+
+    /* Gradient background for footer */
+    .gradient-bottom {
+      background: linear-gradient(to bottom, #ffffff 75%, #f0f0f0 100%);
+    }
+
+    /* Gradient background for Forgot Password box */
+    .forgot-password-box {
+      background: linear-gradient(to bottom, #ffffff 80%, #f0f0f0 100%);
+      border-top: 4px solid #1E40AF;
+      border-radius: 8px;
+      padding: 2rem;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }
   </style>
 </head>
 
-<body class="bg-gray-100">
+<body class="bg-white font-sans gradient-bg">
 
   <!-- Navbar -->
-  <div class="bg-gray-100 py-4 shadow-lg">
+  <div class="navbar-bg py-3 shadow-lg">
     <div class="container mx-auto flex items-center justify-between px-6">
-      <div class="text-black text-xl font-bold">Skilledity</div>
-      <button class="bg-black text-white py-1 px-3 rounded-md hover:bg-gray-700">Login</button>
+      <div class="text-3xl text-black font-bold tracking-wide">Skilledity</div>
+      <button class="nav-button">Login</button>
     </div>
   </div>
 
   <!-- Main Container -->
-  <div class="flex flex-col lg:flex-row items-center justify-around h-screen px-4 lg:px-40">
+  <div class="content-container flex flex-col lg:flex-row items-center justify-around h-screen px-4 lg:px-40">
+    
     <!-- Forgot Password Form -->
-    <div class="bg-white w-full lg:w-1/3 p-10 border-t-4 border-indigo-700 rounded-md shadow-md">
+    <div class="forgot-password-box w-full lg:w-1/3 p-10">
       <h2 class="text-2xl font-semibold text-black mb-4">Forgot Password</h2>
       <p class="text-gray-600 mb-4">Reset your Password with a link</p>
 
       <form action="#" method="POST" class="space-y-6">
-        <!-- Email Input -->
         <div class="space-y-2">
           <label for="EmailId" class="block text-gray-700 font-medium">Email</label>
           <input type="email" id="EmailId" name="email" placeholder="Enter your email address" required
@@ -41,25 +84,26 @@
 
         <p class="text-sm text-gray-500">A link to reset your password will be sent to your email address.</p>
 
-        <!-- Back to School Login Button -->
-        <a href="2loginpage.html" class="flex items-center text-gray-600 hover:text-black" 
-        onclick="event.preventDefault(); window.location.href='2loginpage.html';">
-       <img src="44473.png" alt="Back Arrow" class="h-5 w-5 mr-2">
-       <span>Back to School Login</span>
-     </a>
-     
+        <a href="2loginpage.html" class="flex items-center text-gray-600 hover:text-black">
+          <img src="44473.png" alt="Back Arrow" class="h-5 w-5 mr-2">
+          <span>Back to School Login</span>
+        </a>
 
-        <!-- Submit Button -->
         <button type="submit" class="w-full bg-black text-white py-2 rounded-md hover:bg-opacity-85">Submit</button>
       </form>
     </div>
 
-    <!-- Illustration (Hidden on Mobile) -->
-    <div class="hidden lg:block">
-      <img src="photo.svg" alt="Login illustration" class="w-[350px] h-[467px]">
+    <!-- Right: Illustration -->
+    <div class="hidden lg:block illustration">
+      <img src="photo.svg" alt="Login illustration">
     </div>
+
   </div>
+
 </body>
 
 </html>
+
+
+
 
