--- a/3loginpage.html
+++ b/3loginpage.html
@@ -8,6 +8,11 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
   <style>
+    html, body {
+      overflow: hidden; /* Remove scroll bar */
+      height: 100%;     /* Ensure full height is covered */
+    }
+
     body {
       font-family: 'Montserrat';
       background-color: white;
@@ -58,7 +63,6 @@
 </head>
 
 <body class="bg-white font-sans gradient-bg">
-
   <!-- Navbar -->
   <div class="navbar-bg py-3 shadow-lg">
     <div class="container mx-auto flex items-center justify-between px-6">
