--- a/4loginpage.html
+++ b/4loginpage.html
@@ -41,7 +41,6 @@
             padding-top: 2rem; /* Reduced padding to bring content closer to the navbar */
         }
 
-
         /* Card styling */
         .card {
             background-color: #ffffff; /* Ensure card background is white */
@@ -65,12 +64,11 @@
     <!-- Navbar -->
     <div class="navbar-bg py-3 shadow-lg">
         <div class="container mx-auto flex items-center justify-between px-6">
-          <div class="text-3xl text-black font-bold tracking-wide">Skilledity</div>
-          <a href="Login.html">
-            <button class="nav-button">Logout</button>
-          </a>
+            <div class="text-3xl text-black font-bold tracking-wide">Skilledity</div>
+            <a href="Login.html">
+                <button class="nav-button">Logout</button>
+            </a>
         </div>
-      </div>
     </div>
 
     <!-- Dashboard Container with reduced padding and margins -->
@@ -83,7 +81,7 @@
         </header>
 
         <!-- Dashboard Content -->
-        <div class="flex flex-col md:flex-row gap-4 justify-center items-center"> <!-- Decreased the gap between the cards -->
+        <div class="flex flex-col md:flex-row gap-10 justify-center items-center"> <!-- Increased the gap between the cards -->
 
             <!-- Card 1: Student Details -->
             <div class="card max-w-sm">
@@ -116,6 +114,7 @@
 </body>
 
 </html>
+
 
 
 
