--- a/5loginpage.html
+++ b/5loginpage.html
@@ -200,8 +200,11 @@
 
         <!-- Submit Button -->
         <div class="flex justify-center mt-8">
-          <button type="submit" class="proceed-btn font-medium px-6 py-3 rounded-md transition">Proceed</button>
-        </div>
+          <a href="studentDashboard.html" class="proceed-btn font-medium px-6 py-3 rounded-md transition">
+              <button type="button">Proceed</button>
+          </a>
+      </div>
+      
       </form>
     </div>
   </div>
