--- a/6loginpage.html
+++ b/6loginpage.html
@@ -10,13 +10,8 @@
   <style>
     body {
       font-family: 'Montserrat';
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
+      background-color: white;
     }
-
-    /* Navbar button styling */
     .nav-button {
       background-color: #000;
       color: white;
