--- a/5loginpage.html
+++ b/5loginpage.html
@@ -200,7 +200,7 @@
 
         <!-- Submit Button -->
         <div class="flex justify-center mt-8">
-          <a href="studentDashboard.html" class="proceed-btn font-medium px-6 py-3 rounded-md transition">
+          <a href="7Loginpage.html" class="proceed-btn font-medium px-6 py-3 rounded-md transition">
               <button type="button">Proceed</button>
           </a>
       </div>
