--- a/7loginpage.html
+++ b/7loginpage.html
@@ -221,7 +221,7 @@
                 </div>
             </div>
             <div class="flex justify-center mt-8">
-                <a href="registerstudent.html" class="proceed-btn font-medium px-6 py-3 rounded-md transition">
+                <a href="8loginpage.html" class="proceed-btn font-medium px-6 py-3 rounded-md transition">
                     <button type="button">Proceed</button>
                 </a>
             </div>
