--- a/registerstudent.html
+++ b/registerstudent.html
@@ -80,11 +80,13 @@
         </div>
 
         <!-- Upload Button -->
-        <button class="bg-black text-white font-medium py-2 px-6 mt-8 rounded-lg hover:bg-gray-800 focus:outline-none focus:ring focus:ring-indigo-300">
+        <a href="lastpage.html" class="bg-black text-white font-medium py-2 px-6 mt-8 rounded-lg hover:bg-gray-800 focus:outline-none focus:ring focus:ring-indigo-300">
           Upload
-        </button>
+      </a>
+      
       </div>
     </div>
   </div>
 </body>
 </html>
+
