--- a/registerstudent.html
+++ b/registerstudent.html
@@ -80,9 +80,10 @@
         </div>
 
         <!-- Upload Button -->
-        <a href="lastpage.html" class="bg-black text-white font-medium py-2 px-6 mt-8 rounded-lg hover:bg-gray-800 focus:outline-none focus:ring focus:ring-indigo-300">
+        <button onclick="window.location.href='lastpage.html'" class="bg-black text-white font-medium py-2 px-6 mt-8 rounded-lg hover:bg-gray-800 focus:outline-none focus:ring focus:ring-indigo-300">
           Upload
-      </a>
+      </button>
+      
       
       </div>
     </div>
