--- a/4loginpage.html
+++ b/4loginpage.html
@@ -100,7 +100,7 @@
                     <button class="btn-csv bg-white text-black border shadow-sm py-2 px-6 rounded hover:bg-blue-50 transition duration-200">
                         Upload CSV
                     </button>
-                    <a href="6loginpage.html">
+                    <a href="registerstudent.html">
                         <button class="btn-manual bg-gray-800 text-white py-2 px-6 rounded hover:bg-gray-900 transition duration-200">
                             Manual
                         </button>
@@ -110,10 +110,6 @@
 
         </div>
     </div>
-
-</body>
-
-</html>
 
 
 
